Compile for Java 8 after finding a new bungeecord repository.